# Image-Restoration-Benchmark

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  cli.py
assets/: README.md
assets/example_outputs/: metrics.csv  metrics.json
assets/samples/: SOURCES.md
data/: README.md
docs/: method_summary.md
experiments/: README.md
image_restoration_benchmark/: __init__.py  contrast.py  filters.py  io.py  metrics.py  noise.py  pipeline.py  visualization.py
legacy/impulse-noise-filtering/: .gitignore  README.md  requirements.txt
legacy/impulse-noise-filtering/notebooks/: README.md  impulse_noise_filtering_exploration.ipynb
legacy/impulse-noise-filtering/sample/: SOURCES.md
legacy/impulse-noise-filtering/scripts/: run_demo.py
legacy/impulse-noise-filtering/src/: __init__.py  median_filter.py
legacy/piecewise-contrast-mapping/: .gitignore  README.md
legacy/piecewise-contrast-mapping/notebooks/: README.md  piecewise_contrast_mapping_exploration.ipynb
legacy/piecewise-contrast-mapping/sample/: SOURCES.md
legacy/piecewise-contrast-mapping/scripts/: run_demo.py
legacy/piecewise-contrast-mapping/src/: __init__.py  piecewise_mapping.py
legacy/psnr-quality-metrics/: .gitignore  README.md
legacy/psnr-quality-metrics/notebooks/: README.md  psnr_quality_metrics_exploration.ipynb
legacy/psnr-quality-metrics/sample/: SOURCES.md
legacy/psnr-quality-metrics/scripts/: run_demo.py
legacy/psnr-quality-metrics/src/: __init__.py  psnr_tools.py
scripts/: run_benchmark.py
tests/: test_metrics.py  test_pipeline.py
