[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-restoration-benchmark"
version = "0.1.0"
description = "Image degradation, restoration, contrast enhancement, and quality metric benchmark toolkit."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "opencv-python>=4.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.setuptools.packages.find]
include = ["image_restoration_benchmark*"]
